[package]
name = "envtest"
readme = "README.md"
repository = "https://github.com/kube-rs/envtest"
description = "A lightweight, type‑safe wrapper around the Kubernetes `envtest` Go package that lets you spin up a temporary control plane from Rust."
version = "0.1.0"
edition = "2024"
license = "MIT/Apache-2.0"
include = ["/src", "/go", "/build.rs"]

[dependencies]
rust2go = { version = "0.4.3" }
serde = "1"
serde_json = "1"
thiserror = "2"

[build-dependencies]
rust2go = { version = "0.4.3", features = ["build"] }
