[package]
name = "envtest"
readme = "README.md"
repository = "https://github.com/kube-rs/envtest"
description = "A lightweight, type‑safe wrapper around the Kubernetes `envtest` Go package that lets you spin up a temporary control plane from Rust."
version = "0.1.0"
edition = "2024"
license = "MIT/Apache-2.0"
include = ["/src", "/go", "/build.rs"]

[dependencies]
rust2go = { version = "0.4.3", optional = true}
serde = "1"
serde_json = "1"
thiserror = "2"
k8s-openapi = { version = ">= 0", features = ["latest"], optional = true }
kube = { version = ">= 1", optional = true }

[features]
kube = ["dep:k8s-openapi", "dep:kube"]
r2g = ["dep:rust2go"]
_docsrs = []
default = ["kube", "r2g"]

[dev-dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.5"

[build-dependencies]
rust2go = { version = "0.4.3", features = ["build"], optional = true }

[package.metadata.docs.rs]
features = ["kube", "_docsrs"]
no-default-features = true
